[gd_scene load_steps=16 format=3 uid="uid://cb3s6ysg7kg81"]

[ext_resource type="Script" path="res://scenes/enemies/hunter.gd" id="1_1w2bq"]
[ext_resource type="Texture2D" uid="uid://dfick85nw03h3" path="res://graphics/enemies/hunter/parts/torso.png" id="2_djgli"]
[ext_resource type="Texture2D" uid="uid://bvvs3rcrv8xa2" path="res://graphics/enemies/hunter/parts/leg_front_inner.png" id="3_hwk3q"]
[ext_resource type="Texture2D" uid="uid://dlcv12wh7qcqn" path="res://graphics/enemies/hunter/parts/leg_front_outer.png" id="4_1r4ae"]
[ext_resource type="Texture2D" uid="uid://dxeutosjcqyk5" path="res://graphics/enemies/hunter/parts/head.png" id="5_gbj7g"]
[ext_resource type="Texture2D" uid="uid://ccsdfrbv4tcbn" path="res://graphics/enemies/hunter/parts/leg_back_inner.png" id="6_ivvcg"]
[ext_resource type="Texture2D" uid="uid://bbatgf3ndm5kx" path="res://graphics/enemies/hunter/parts/leg_back_outer.png" id="7_so3fr"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wpv2r"]
radius = 21.0
height = 206.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tkp3w"]
radius = 1570.22

[sub_resource type="CircleShape2D" id="CircleShape2D_r63q1"]
radius = 406.399

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_ivs6j"]
resource_name = "FrontRightLeg"
target_nodepath = NodePath("../Targets/FrontRight")
flip_bend_direction = true
joint_one_bone_idx = 1
joint_one_bone2d_node = NodePath("Torso/FrontRightLeg")
joint_two_bone_idx = 2
joint_two_bone2d_node = NodePath("Torso/FrontRightLeg/FrontRightClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_2mkip"]
resource_name = "FrontLeftLeg"
target_nodepath = NodePath("../Targets/FrontLeft")
joint_one_bone_idx = 3
joint_one_bone2d_node = NodePath("Torso/FrontLeftLeg")
joint_two_bone_idx = 4
joint_two_bone2d_node = NodePath("Torso/FrontLeftLeg/FrontLeftClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_psguv"]
resource_name = "BackRightLeg"
target_nodepath = NodePath("../Targets/BackRight")
joint_one_bone_idx = 6
joint_one_bone2d_node = NodePath("Torso/BackRightLeg")
joint_two_bone_idx = 7
joint_two_bone2d_node = NodePath("Torso/BackRightLeg/BackRightClaw")

[sub_resource type="SkeletonModification2DTwoBoneIK" id="SkeletonModification2DTwoBoneIK_h4ylq"]
resource_name = "BackLeftLeg"
target_nodepath = NodePath("../Targets/BackLeft")
flip_bend_direction = true
joint_one_bone_idx = 8
joint_one_bone2d_node = NodePath("Torso/BackLeftLeg")
joint_two_bone_idx = 9
joint_two_bone2d_node = NodePath("Torso/BackLeftLeg/BackLeftClaw")

[sub_resource type="SkeletonModificationStack2D" id="SkeletonModificationStack2D_cvixr"]
enabled = true
modification_count = 4
modifications/0 = SubResource("SkeletonModification2DTwoBoneIK_ivs6j")
modifications/1 = SubResource("SkeletonModification2DTwoBoneIK_2mkip")
modifications/2 = SubResource("SkeletonModification2DTwoBoneIK_psguv")
modifications/3 = SubResource("SkeletonModification2DTwoBoneIK_h4ylq")

[node name="Hunter" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_1w2bq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_wpv2r")

[node name="NoticeArea" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="NoticeArea"]
shape = SubResource("CircleShape2D_tkp3w")

[node name="AttackArea" type="Area2D" parent="."]
visible = false
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_r63q1")
debug_color = Color(0.960291, 0.200869, 5.77569e-07, 0.42)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_enabled = true

[node name="Timers" type="Node2D" parent="."]

[node name="PositionTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="Skeleton2D" type="Skeleton2D" parent="."]
modification_stack = SubResource("SkeletonModificationStack2D_cvixr")

[node name="Torso" type="Bone2D" parent="Skeleton2D"]

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso"]
top_level = true
position = Vector2(7, 4)
texture = ExtResource("2_djgli")
metadata/_edit_lock_ = true

[node name="FrontRightLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(27, -53)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/FrontRightLeg"]
position = Vector2(28, -39)
texture = ExtResource("3_hwk3q")

[node name="FrontRightClaw" type="Bone2D" parent="Skeleton2D/Torso/FrontRightLeg"]
position = Vector2(49, -67)
auto_calculate_length_and_angle = false
length = 112.095
bone_angle = -53.961
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/FrontRightLeg/FrontRightClaw"]
position = Vector2(47, -33)
texture = ExtResource("4_1r4ae")

[node name="FrontLeftLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-32, -48)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/FrontLeftLeg"]
position = Vector2(-21, -38)
scale = Vector2(-1, 1)
texture = ExtResource("3_hwk3q")

[node name="FrontLeftClaw" type="Bone2D" parent="Skeleton2D/Torso/FrontLeftLeg"]
position = Vector2(-42, -66)
auto_calculate_length_and_angle = false
length = 114.576
bone_angle = -124.882
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/FrontLeftLeg/FrontLeftClaw"]
position = Vector2(-46, -36)
scale = Vector2(-1, 1)
texture = ExtResource("4_1r4ae")

[node name="Head" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(0, -93)
auto_calculate_length_and_angle = false
length = 114.576
bone_angle = -90.0

[node name="Head" type="Sprite2D" parent="Skeleton2D/Torso/Head"]
position = Vector2(-1, -58)
texture = ExtResource("5_gbj7g")

[node name="BackRightLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(30, 3)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/BackRightLeg"]
position = Vector2(19, 37)
texture = ExtResource("6_ivvcg")

[node name="BackRightClaw" type="Bone2D" parent="Skeleton2D/Torso/BackRightLeg"]
position = Vector2(39, 74)
auto_calculate_length_and_angle = false
length = 110.195
bone_angle = 67.837
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/BackRightLeg/BackRightClaw"]
position = Vector2(30, 45)
texture = ExtResource("7_so3fr")

[node name="BackLeftLeg" type="Bone2D" parent="Skeleton2D/Torso"]
position = Vector2(-30, 4)
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/BackLeftLeg"]
position = Vector2(-14, 36)
scale = Vector2(-1, 1)
texture = ExtResource("6_ivvcg")

[node name="BackLeftClaw" type="Bone2D" parent="Skeleton2D/Torso/BackLeftLeg"]
position = Vector2(-32, 72)
auto_calculate_length_and_angle = false
length = 108.004
bone_angle = 112.548
metadata/_local_pose_override_enabled_ = true

[node name="Sprite2D" type="Sprite2D" parent="Skeleton2D/Torso/BackLeftLeg/BackLeftClaw"]
position = Vector2(-31, 47)
scale = Vector2(-1, 1)
texture = ExtResource("7_so3fr")

[node name="Targets" type="Node2D" parent="."]

[node name="FrontRight" type="Marker2D" parent="Targets"]
position = Vector2(164, -199)

[node name="FrontLeft" type="Marker2D" parent="Targets"]
position = Vector2(-135, -214)

[node name="BackRight" type="Marker2D" parent="Targets"]
position = Vector2(137, 110)

[node name="BackLeft" type="Marker2D" parent="Targets"]
position = Vector2(-142, 102)

[connection signal="body_entered" from="NoticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="NoticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="Timers/PositionTimer" to="." method="_on_position_timer_timeout"]
